<resources>
    <string name="step_counter">android.hardware.sensor.stepcounter</string>
    <string name="step_detector">android.hardware.sensor.stepdetector</string>
<<<<<<< HEAD

    <string name="sdistance"> </string>
    <string name="scalories"> </string>
    <!-- strings for Splash -->
    <string name="teamname">Team ARJ Presents</string>
=======
    <string name="tab">\u0009\u0009\u0009\u0009</string>
>>>>>>> master

    <!-- strings for Toolbar -->
    <string name="Discussion">Discussions</string>
    <string name="News">News</string>
<<<<<<< HEAD
    <string name="Setting">Setting</string>
    <string name="Help">Help</string>
    <string name="About">About</string>

    <!-- strings for Main -->
    <string name="app_name">FitTrack</string>
    <string name="Option">Option</string>
    <string name="StepsCounter">Steps</string>
    <string name="Distance">Distance</string>

    <string name="NotePad">NotePad</string>
    <string name="Weight">Weight</string>
    <string name="Calories">Calories Burnt</string>
    <string name="cal">cals</string>

    <!-- strings for weight -->
    <string name="FinalWeight">Final Weight</string>
    <string name="Weightlog">Weight Log</string>
    <string name="currentWeight">Enter Weight</string>
    <string name="latestWeight">Latest weight here:</string>
    <string name="progressButton">Check Progress</string>
    <string name="saveButton">Save</string>
    <string name="bmi">BMI Calculator (Body Mass Index)</string>


=======
    <!--<string name="Setting">Setting</string>-->
    <string name="Help">Help</string>
    <string name="About">About</string>

    <!-- strings for FAQ -->
    <string name="Q1">How does the step counter work? </string>
    <string name="A1">A counter will increment as a user walk. </string>
    <string name="Q2">How does the distance travel and calories burnt work?</string>
    <string name="A2">These two functions work based on a formula and is dependent on a users steps. </string>
    <string name="Q3">Is there a limit on the number of goals that I can write?</string>
    <string name="A3">There is no limit you can set as many goals as you want.</string>
    <string name="Q4">What and where are these challenges?</string>
    <string name="A4">Challeneges are updated weekly by the developers for users to complete. They are all generated from an online database.</string>
    <string name="Q5">What version do I have of FitTrack? </string>
    <string name="A5">The version is shown inside of the About section.</string>
    <string name="Q6">How do I access all the different features of this app?</string>
    <string name="A6">Clicking on the icons that correspond to the different features of this app.</string>

    <!-- strings for About -->
    <string name="S1">FitTrack was designed to help users achieve and maintain a healthy lifestyle.</string>
    <string name="S2">This app will help users organize their fitness and day to day life.</string>
    <string name="S3">Our app attempted to keep the interface as simple as possile so that all age groups will find it easy to use.</string>
    <string name="S4">The purpose of our application is trying to promote healthier life choices.</string>
    <string name="S5">Version 1.0</string>

    <!-- strings for Main -->
    <string name="app_name">FitTrack</string>
    <string name="StepsCounter">Steps</string>
    <string name="Distance">Distance</string>
    <string name="Calories">Calories Burnt</string>
    <string name="cal">cals</string>
    <string name="NotePad">NotePad</string>
    <string name="Weight">Weight</string>
    <string name="Goals">Goals</string>

    <string name="Setgoals">Set Goals</string>
    <string name="goalslog">Goals Log</string>
    <string name="NewGoal">Add a new Goal</string>
    <string name="Deletegoals">Delete Goals</string>
    <string name="listgoal">List of Goals:</string>

    <!-- strings for weight -->
    <string name="currentHeight">Enter Height</string>
    <string name="latestHeight">Your Height: </string>
    <string name="latestWeight">Latest Weight: </string>
>>>>>>> master

    <!-- Sensors -->
    <string name="UVIndex">UV Index</string>
    <string name="Thermalarray">Thermal Array</string>
    <string name="Info">Info</string>

<<<<<<< HEAD
    <!-- strings for Goals -->
    <string name="Goals">Goals</string>
    <string name="Setgoals">Set Goals</string>
    <string name="NewGoal">Add a new Goal</string>
    <string name="Deletegoals">Delete Goals</string>
    <string name="listgoal">List of Goals:</string>
    <string name="Addedgoalmessage">Goal added</string>
    <string name="Entergoal">Please enter a goal</string>
    <string name="remove">Remove Goal</string>
    <string name="completed">Goal completed? </string>


    <!-- strings for Challenges -->
    <string name="ChallengeList">List of Challenges:</string>
=======

    <!-- strings for Challenges -->
    <string name="ChallengeList">List of Challenge</string>
>>>>>>> master
    <string name="Challenge">Challenge</string>

    <!-- strings for Notes -->
    <string name="Saves">Saved Notes</string>
    <string name="title_activity_menu_tab">FitTrack</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
