<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        style="@style/AppTheme"
        android:id="@+id/Setting"
        android:title="@string/Setting"
        app:showAsAction="never"
        android:orderInCategory="4"></item>
    <item
        style="@style/AppTheme"
        android:id="@+id/Help"
        android:title="@string/Help"
        app:showAsAction="never"
        android:orderInCategory="3"></item>
    <item
        style="@style/AppTheme"
        android:id="@+id/About"
        android:title="@string/About"
        app:showAsAction="never"
        android:orderInCategory="2"></item>
    <item
        style="@style/AppTheme"
        android:id="@+id/News"
        android:title="@string/News"
        app:showAsAction="never"
        android:orderInCategory="1"></item>
    <item
        style="@style/AppTheme"
        android:id="@+id/Discussion"
        android:title="@string/Discussion"
        app:showAsAction="ifRoom"></item>
		
	<item
        style="@style/AppTheme"
        android:id="@+id/Notes"
        android:title="@string/Saves"
        app:showAsAction="never"
        android:orderInCategory="5"></item>

</menu>
