<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="10dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

<<<<<<< HEAD
        <ImageButton
            android:id="@+id/setgoal"
            android:layout_width="81dp"
            android:layout_height="79dp"
            android:background="@drawable/addgoalicon"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/goallist"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="30dp"
            app:layout_constraintLeft_toLeftOf="parent" />
=======
        <Button
            android:id="@+id/deletegoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/Deletegoals"
            app:layout_constraintBaseline_toBaselineOf="@+id/setgoal"
            app:layout_constraintLeft_toLeftOf="@+id/editText"
            tools:layout_constraintBaseline_creator="1"
            tools:layout_constraintLeft_creator="1" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="168dp"
            android:layout_height="42dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            tools:layout_constraintTop_creator="1"
            android:layout_marginStart="58dp"
            android:layout_marginTop="54dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="64dp" />

        <Button
            android:id="@+id/setgoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Setgoals"
            tools:layout_constraintTop_creator="1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/deletegoal" />
>>>>>>> master

        <TextView
            android:id="@+id/goallist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:layout_marginStart="16dp"
            android:text="@string/listgoal"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/listv"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="7dp"
=======
            android:text="@string/listgoal"
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/listv"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="8dp"
>>>>>>> master
            app:layout_constraintLeft_toLeftOf="parent" />

        <ListView
            android:id="@+id/listv"
            android:layout_width="0dp"
            android:layout_height="384dp"
<<<<<<< HEAD
            android:background="@android:color/white"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="151dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0">
=======
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="49dp"
            app:layout_constraintTop_toBottomOf="@+id/deletegoal"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent">
>>>>>>> master

        </ListView>


    </android.support.constraint.ConstraintLayout>

</LinearLayout>

