<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="arj.fittrack.Main"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <!--
    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/greenbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"> -->

    <TextView
        android:id="@+id/stepcounter"
        android:layout_width="69dp"
        android:layout_height="0dp"
        android:fontFamily="casual"
        android:text="@string/StepsCounter"
        android:textColor="@color/green"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- android:background="@drawable/tab" -->
    <TextView
        android:id="@+id/count"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:fontFamily="casual"
        android:text="0"
        android:gravity="center"
        android:textColor="@color/pink"
        android:background="@drawable/tab"
        android:textSize="60sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/distance"
        app:layout_constraintRight_toRightOf="@+id/travelled"
        android:layout_marginTop="37dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="41dp"
        app:layout_constraintLeft_toLeftOf="@+id/travelled"
        app:layout_constraintTop_toTopOf="@+id/stepcounter" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:src="@drawable/walkingicon"
        android:id="@+id/imageView7"
        app:layout_constraintRight_toLeftOf="@+id/count"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/distance"
        android:layout_marginTop="70dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="53dp"
        app:layout_constraintLeft_toLeftOf="@+id/stepcounter"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="99dp"
        android:layout_height="30dp"
        android:fontFamily="casual"
        android:text="@string/Distance"
        android:textColor="@color/green"
        android:textSize="24sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/imageView6"
        android:layout_marginTop="139dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageView6" />

    <TextView
        android:id="@+id/travelled"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:fontFamily="casual"
        android:text="0"
        android:textColor="@color/pink"
        android:textSize="60sp"
        android:background="@drawable/tab"
        android:gravity="center"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/meter"
        android:layout_marginTop="49dp"
        app:layout_constraintTop_toBottomOf="@+id/count"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/cals" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/distanceicon"
        android:id="@+id/imageView6"
        app:layout_constraintRight_toLeftOf="@+id/travelled"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/travelled"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/travelled" />

    <TextView
        android:id="@+id/calsburnt"
        android:layout_width="169dp"
        android:layout_height="29dp"
        android:fontFamily="casual"
        android:text="@string/Calories"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/cals"
        android:layout_marginTop="75dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="75dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/travelled" />

    <TextView
        android:id="@+id/cals"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:fontFamily="casual"
        android:text="0"
        android:textColor="@color/pink"
        android:textSize="60sp"
        android:background="@drawable/tab"
        android:gravity="center"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/calories"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/notepad"
        app:layout_constraintTop_toTopOf="@+id/calories" />

    <TextView
        android:id="@+id/calories"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:text="@string/cal"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="167dp"
        app:layout_constraintLeft_toRightOf="@+id/weight" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/caloriesburnticon"
        android:id="@+id/imageView8"
        android:layout_marginEnd="2dp"
        app:layout_constraintRight_toLeftOf="@+id/cals"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/cals"
        android:layout_marginTop="10dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/calsburnt"
        app:layout_constraintTop_toTopOf="@+id/cals" />

    <TextView
        android:id="@+id/meter"
        android:layout_width="84dp"
        android:layout_height="21dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginEnd="1dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/calories"
        app:layout_constraintRight_toRightOf="@+id/cals"
        android:layout_marginTop="91dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintTop_toTopOf="@+id/distance"
        tools:layout_editor_absoluteX="299dp"
        android:layout_marginRight="1dp"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/notepad"
        android:layout_width="107dp"
        android:layout_height="102dp"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:src="@drawable/notepadicon"
        android:layout_marginStart="65dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:id="@+id/weight"
        android:layout_width="94dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/weighticon"
        android:layout_marginEnd="79dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="@+id/notepad" />



</android.support.constraint.ConstraintLayout>

